# llmcalculator

./: .gitignore  README.md  main.py  pyproject.toml
backend/: llmcalc-backend.spec  main.py  pyproject.toml  run_server.py
backend/api/: routes_calculate.py  routes_hardware.py  routes_models.py  routes_precision.py
backend/core/: __init__.py  calculator.py  laptop_scoring.py  memory.py  quantization.py  scenarios.py  scoring.py  speed.py  supercomputer_scoring.py
backend/models/: request_models.py  response_models.py
backend/utils/: data_loader.py  model_resolver.py
data/: cpu_specs.json  gpu_specs.json  laptop_hardware.json  precision_formats.json  ram_specs.json  supercomputer.json
desktop/: package-lock.json  package.json
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/binaries/: README.md
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: README.md  icon.icns
desktop/src-tauri/src/: lib.rs  main.rs
frontend/: .env.production  index.html  package-lock.json  package.json  tsconfig.json
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/results/: HardwareDetailModal.tsx  LaptopHardwarePanel.tsx  ResultsPanel.tsx  SupercomputerPanel.tsx  TierCard.tsx
frontend/src/components/scenario/: ModelSelector.tsx  ModelSelectorModal.tsx  PrecisionSelector.tsx  PrecisionSelectorModal.tsx  (+1 more)
frontend/src/pages/: Calculator.tsx
frontend/src/store/: scenarioStore.ts
frontend/src/types/: api.ts
scripts/: build-backend.bat  build-backend.sh  build-desktop.bat  build-desktop.sh
