[project]
name = "llmcalculator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.135.1",
    "httpx>=0.28.1",
    "numpy>=2.4.3",
    "orjson>=3.11.7",
    "pydantic>=2.0",
    "pyinstaller>=6.19.0",
    "pytest>=9.0.2",
    "uvicorn>=0.41.0",
]
